# label-studio

./: .dockerignore  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .pre-commit-dev.yaml  CONTRIBUTING.md  DESIGN.md  Dockerfile  Dockerfile.development  Makefile  README.md  app.json  docker-compose.minio.yml  docker-compose.override.example.yml  docker-compose.yml  fixup_whitelabel.py  login_page.html  pyproject.toml  vps_build.py  vps_check.py  vps_cmd.py  whitelabel.py
.cursor/rules/: async_migrations.mdc  cypress_tests.mdc  design.mdc  iterate_queryset.md  no-lodash.mdc  react.mdc  storage-provider.mdc  tailwind.mdc  typescript.mdc
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  content_creator_program.md
.github/scripts/: select-frontend-tests.sh
.github/workflows/: algolia-crawler-hs-docs.yml  algolia-crawler-ls-docs.yml  apply-linters.yml  bandit.yml  biome.yml  blue.yml  build-mltl.yml  build_pypi.yml  build_pypi_nightly.yml  bump-helm-chart.yml  cicd_pipeline.yml  cicd_pipeline_develop.yml  codeql.yml  codespell.yml  create-tag-docs.yml  cursor-review.yml  delete_pr_branch.yml  docker-build-ontop.yml  docker-build.yml  docker-command.yml  docker-release-promote.yml  feature-flags-update.yml  ff-command.yml  fmt-command.yml  follow-merge-dispatch.yml  follow-merge-set-lse-check.yml  follow-merge-upstream-repo-sync-v2.yml  frontend-command.yml  git-command.yml  gitleaks.yml  help-command.yml  jira-command.yml  link-check.yml  release-cut-off-release-branch.yml  release-pipeline.yml  release-set-version.yml  ruff.yml  slash-command-dispatch.yml  stale.yml  stylelint.yml  (+14 more)
deploy/: default.conf  docker-entrypoint.sh
docs/: CONTRIBUTING.md  README.md  _config.yml  _multiconfig.yml  enterprise.yml  netlify.toml  opensource.yml  package.json
docs/scripts/: index.js  release-notes.js  replaceContent.js  tableOfContent.js
docs/source/guide/: FAQ.md  access_tokens.md  (+109 more)
label_studio/: __init__.py  conftest.py  feature_flags.json  manage.py  pytest.ini  server.py
label_studio/annotation_templates/: groups.txt
label_studio/core/: all_urls.json  argparser.py  async_migrations.md  bulk_update_utils.py  context_processors.py  current_context.py  current_request.py  decorators.py  filters.py  label_config.py  middleware.py  migration_helpers.py  mixins.py  models.py  old_ls_migration.py  permissions.py  redis.py  storage.py  urls.py  version.py  views.py  wsgi.py
label_studio/data_export/: api.py  apps.py  mixins.py  models.py  serializers.py  urls.py
label_studio/data_import/: api.py  functions.py  models.py  serializers.py  uploader.py  urls.py
label_studio/data_manager/: api.py  apps.py  functions.py  managers.py  models.py  prepare_params.py  serializers.py  urls.py  views.py
label_studio/fsm/: ARCHITECTURE.md  README.md  __init__.py  annotation_transitions.py  api.py  apps.py  context_cache.py  functions.py  integrations.py  middleware.py  models.py  project_transitions.py  queryset_mixins.py  registry.py  serializer_fields.py  serializers.py  signals.py  state_choices.py  state_inference.py  state_manager.py  state_models.py  task_transitions.py  transition_executor.py  transition_utils.py  transitions.py  urls.py  utils.py
label_studio/io_storages/: README.md  all_api.py  api.py  base_models.py  exceptions.py  filesystem.py  functions.py  models.py  proxy_api.py  serializers.py  urls.py  utils.py
label_studio/jwt_auth/: admin.py  auth.py  middleware.py  models.py  serializers.py  urls.py  views.py
label_studio/labels_manager/: api.py
label_studio/ml/: README.md  api.py  api_connector.py  models.py  serializers.py  urls.py
label_studio/ml_model_providers/: README.md  admin.py  models.py
label_studio/ml_models/: README.md  admin.py  models.py
label_studio/organizations/: admin.py  api.py  apps.py  forms.py  functions.py  middleware.py  mixins.py  models.py  serializers.py  urls.py  views.py
label_studio/projects/: __init__.py  api.py  apps.py  mixins.py  models.py  serializers.py  signals.py  transitions.py  urls.py  views.py
label_studio/session_policy/: admin.py  api.py  models.py  serializers.py  urls.py
label_studio/tasks/: __init__.py  annotation_draft_transitions.py  annotation_transitions.py  api.py  apps.py  functions.py  mixins.py  models.py  openapi_schema.py  serializers.py  transitions.py  urls.py  validation.py
label_studio/templates/: 403.html  404.html  500.html  base.html  simple.html
label_studio/tests/: __init__.py  config_validation.tavern.yml  conftest.py  create_project.tavern.yml  create_project_and_import_data.tavern.yml  data_export.tavern.yml  data_import.tavern.yml  drafts.tavern.yml  export.tavern.yml  io_storages.tavern.yml  io_storages_presign_proxy.tavern.yml  ml.tavern.yml  next_task.tavern.yml  predictions.model.tavern.yml  predictions.tavern.yml  sessions.tavern.yml  test_annotations.py  test_annotations_result_count.py  test_api.py  test_batch_update_deadlock.py  test_bulk_operations.py  test_cli.py  test_config_validation.py  test_core.py  test_docs.py  test_endpoints.py  test_exception.py  test_export.py  test_fsm_lso_workflows.py  test_invites.py  test_next_task.py  test_organizations.py  test_prediction_validation.py  test_predictions.py  test_presign_storage_data.py  test_project_validation.py  test_projects.tavern.yml  test_session_policy_sdk.py  test_tasks_upload.py  test_upload_svg.py  (+2 more)
label_studio/users/: admin.py  api.py  apps.py  forms.py  models.py  serializers.py  urls.py  validators.py  views.py
label_studio/webhooks/: api.py  serializers.py  serializers_for_hooks.py  utils.py
scripts/: split_import_json.py  update_ml_tutorials.py
tools/bandit_ls_custom_checks/: pyproject.toml
tools/bandit_ls_custom_checks/checks/: rq_enqueue.py
web/: .gitignore  .stylelintignore  .stylelintrc.json  .yarnclean  LSE_BEM_MIGRATION_PROMPT.md  README.md  babel.config.json  biome.json  components.json  design-tokens.json  jest.config.ts  jest.preset.js  nx.json  package.json  release.js  tailwind.config.js  tsconfig.base.json  webpack.config.js
(+2418 files in other folders)
